--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game-store",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Bogdan-K-A.github.io/game-store",
+  
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.4",
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
