--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "game-store",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.4",
@@ -16,6 +15,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
